Hack in --url support

--- a/accounts-cluster-bench/Cargo.toml
+++ b/accounts-cluster-bench/Cargo.toml
@@ -16,6 +16,7 @@ rayon = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-clap-utils = { workspace = true }
 solana-client = { workspace = true }
+solana-cli-config = { workspace = true }
 solana-faucet = { workspace = true }
 solana-gossip = { workspace = true }
 solana-logger = { workspace = true }
